--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,4 +1,8 @@
 /* CSS Entry Point */
+.app {
+  width: 300px;
+  margin: auto;
+}
 .home {
   height: 500px;
   width: 250px;
@@ -13,4 +17,31 @@
   height: 25px;
   width: 100%;
   background: yellow;
+  border-bottom: 3px solid lighten(green, 5%);
+}
+.contact {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid black;
+}
+.detail {
+  height: 500px;
+  width: 300px;
+  background: gray;
+}
+.conPic {
+  height: 200px;
+  width: 200px;
+}
+.name {
+  height: 50px;
+}
+.website {
+  height:50px;
+}
+.number {
+  height: 50px;
+}
+.location {
+  height: 50px;
 }
